force-app/main/default/objects/Code_Red_Account__c/Code_Red_Account__c.object-meta.xml
<CustomObject>
    <label>Code Red</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Code Red Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Reds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>