force-app/main/default/objects/Code_Red_Account__c/fields/Account_CSM__c.field-meta.xml
<CustomField>
    <fullName>Account_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Code_Red_Accounts_CSM</relationshipName>
    <type>Lookup</type>
</CustomField>