force-app/main/default/objects/Code_Red_Account__c/fields/Account_HealthScore__c.field-meta.xml
<CustomField>
    <fullName>Account_HealthScore__c</fullName>
    <formula>IF(ISPICKVAL( Account__r.BI_Data__r.SYS_Health_Score__c , &quot;Critical Engagement&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150O000004xFpH&quot;, &quot;red&quot; , 16, 50)&amp;&quot;Critical Engagement &quot;, 

IF( ISPICKVAL( Account__r.BI_Data__r.SYS_Health_Score__c , &quot;More Users Required&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150O000004xWeC&quot;, &quot;yellow&quot;, 16, 50 )&amp;&quot;More Users Required &quot; , 

IF( ISPICKVAL( Account__r.BI_Data__r.SYS_Health_Score__c , &quot;Good Health&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150O000004xFo5&quot;, &quot;green&quot;, 16, 50 )&amp;&quot;Good Health  &quot;, 

IF( ISPICKVAL( Account__r.BI_Data__r.SYS_Health_Score__c , &quot;More Queries Required&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150O000004xFp7&quot;, &quot;Blue&quot;, 16, 50 )&amp;&quot;More Queries Required  &quot;,

&quot;&quot;))))</formula>
    <label>Account HealthScore</label>
    <type>Text</type>
</CustomField>