force-app/main/default/objects/Code_Red_Account__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <label>Code Red Reasons Details</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>