force-app/main/default/objects/Code_Red_Account__c/fields/Champion_Details__c.field-meta.xml
<CustomField>
    <fullName>Champion_Details__c</fullName>
    <label>Champion Details</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>