force-app/main/default/objects/Code_Red_Account__c/fields/Closing_reasons__c.field-meta.xml
<CustomField>
    <fullName>Closing_reasons__c</fullName>
    <label>Closing reasons</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>