force-app/main/default/objects/Code_Red_Account__c/fields/Code_Red_Details__c.field-meta.xml
<CustomField>
    <fullName>Code_Red_Details__c</fullName>
    <label>Code Red Details</label>
    <length>6400</length>
    <type>LongTextArea</type>
</CustomField>