force-app/main/default/objects/Code_Red_Account__c/fields/Code_Red_Reason__c.field-meta.xml
<CustomField>
    <fullName>Code_Red_Reason__c</fullName>
    <label>Code Red Reason</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Overall Health</fullName>
                <label>Poor Health</label>
            </value>
            <value>
                <fullName>Poor Product Utilization %</fullName>
                <label>Poor Seats Utilization</label>
            </value>
            <value>
                <fullName>Non-responsive client</fullName>
                <label>Unresponsive</label>
            </value>
            <value>
                <fullName>General (incoming)</fullName>
            </value>
            <value>
                <fullName>Data issues</fullName>
            </value>
            <value>
                <fullName>Downward Usage Trend</fullName>
            </value>
            <value>
                <fullName>0-2 Active Users, High ARR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>