force-app/main/default/objects/Code_Red_Account__c/fields/Code_Red_Source__c.field-meta.xml
<CustomField>
    <fullName>Code_Red_Source__c</fullName>
    <label>Code Red Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CSM</fullName>
            </value>
            <value>
                <fullName>Customer Journey</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>