force-app/main/default/objects/Code_Red_Account__c/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <formula>Account__r.Owner.FirstName +&quot; &quot;+ Account__r.Owner.LastName</formula>
    <label>CSM</label>
    <type>Text</type>
</CustomField>