force-app/main/default/objects/Code_Red_Account__c/fields/Days_In_progress__c.field-meta.xml
<CustomField>
    <fullName>Days_In_progress__c</fullName>
    <formula>IF( ISBLANK( SYS_Completed_Cancelled_Timestamp__c), null,
 SYS_Completed_Cancelled_Timestamp__c -  SYS_In_process_Timestamp__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In-progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>