force-app/main/default/objects/Code_Red_Account__c/fields/Days_since_opened__c.field-meta.xml
<CustomField>
    <fullName>Days_since_opened__c</fullName>
    <formula>IF( ISPICKVAL(Status__c  , &quot;Completed&quot;), &quot;N/A&quot;,
IF( ISPICKVAL(Status__c  , &quot;Cancelled&quot;), &quot;N/A&quot;, TEXT(TODAY()-  DATEVALUE(CreatedDate) )))</formula>
    <label>Days since opened</label>
    <type>Text</type>
</CustomField>