force-app/main/default/objects/Code_Red_Account__c/fields/Days_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Days_Submitted__c</fullName>
    <formula>IF(ISBLANK( SYS_In_process_Timestamp__c ),null,
SYS_In_process_Timestamp__c -  SYS_Submitted_Timestamp__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>