force-app/main/default/objects/Code_Red_Account__c/fields/Failure_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reasons__c</fullName>
    <label>Failure Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Late renewal (renewed in next quarter)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>