force-app/main/default/objects/Code_Red_Account__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <label>Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
                <default>true</default>
                <label>Red</label>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Gray</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>