force-app/main/default/objects/Code_Red_Account__c/fields/Flag_Photo__c.field-meta.xml
<CustomField>
    <fullName>Flag_Photo__c</fullName>
    <description>IF( ISPICKVAL(  Status__c ,&quot;Completed&quot;)||ISPICKVAL(  Status__c ,&quot;Cancelled&quot;),IMAGE( &quot;/servlet/servlet.FileDownload?file=015b0000004a1Jx&quot;, &quot;GrayFlag&quot;),
IMAGE( &quot;/servlet/servlet.FileDownload?file=015b0000004a1JY&quot;, &quot;RedFlag&quot;</description>
    <formula>IF( ISPICKVAL(  Flag__c  , &quot;Red&quot;),IMAGE( &quot;/servlet/servlet.FileDownload?file=015b0000004a1JY&quot;, &quot;RedFlag&quot;), 
IF( ISPICKVAL( Flag__c  , &quot;Blue&quot;),IMAGE( &quot;/servlet/servlet.FileDownload?file=015b0000004a1Jd&quot;, &quot;BlueFlag&quot;), 
IF( ISPICKVAL( Flag__c  , &quot;Gray&quot;),IMAGE( &quot;/servlet/servlet.FileDownload?file=015b0000004a1Jx&quot;, &quot;GrayFlag&quot;), 
IF( ISPICKVAL( Flag__c  , &quot;Amber&quot;),IMAGE( &quot;/servlet/servlet.FileDownload?file=015b0000004a1Jn&quot;, &quot;YellowFlag&quot;),&quot;&quot; 
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag</label>
    <type>Text</type>
</CustomField>