force-app/main/default/objects/Code_Red_Account__c/fields/How_do_we_solve_it__c.field-meta.xml
<CustomField>
    <fullName>How_do_we_solve_it__c</fullName>
    <label>How do we solve it</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>