force-app/main/default/objects/Code_Red_Account__c/fields/Life_Cycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Life_Cycle_Stage__c</fullName>
    <label>Life Cycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>