force-app/main/default/objects/Code_Red_Account__c/fields/Link_to_survey__c.field-meta.xml
<CustomField>
    <fullName>Link_to_survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Link to survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipName>Code_Red_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>