force-app/main/default/objects/Code_Red_Account__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding</label>
    <type>Checkbox</type>
</CustomField>