force-app/main/default/objects/Code_Red_Account__c/fields/Prioritization__c.field-meta.xml
<CustomField>
    <fullName>Prioritization__c</fullName>
    <label>Prioritization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>