force-app/main/default/objects/Code_Red_Account__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Code_Red_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>