force-app/main/default/objects/Code_Red_Account__c/fields/Renewal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Quarter__c</fullName>
    <formula>CASE( MONTH(Renewal_Date__c) , 01 , TEXT(YEAR(Renewal_Date__c))+&quot;-Q1&quot; , 02, TEXT(YEAR(Renewal_Date__c))+&quot;-Q1&quot;, 03, TEXT(YEAR(Renewal_Date__c))+&quot;-Q1&quot;, 04, TEXT(YEAR(Renewal_Date__c))+&quot;-Q2&quot; , 05, TEXT(YEAR(Renewal_Date__c))+&quot;-Q2&quot;, 06, TEXT(YEAR(Renewal_Date__c))+&quot;-Q2&quot;, 07, TEXT(YEAR(Renewal_Date__c))+&quot;-Q3&quot;, 08, TEXT(YEAR(Renewal_Date__c))+&quot;-Q3&quot;, 09, TEXT(YEAR(Renewal_Date__c))+&quot;-Q3&quot; , 
TEXT(YEAR(Renewal_Date__c))+&quot;-Q4&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Quarter</label>
    <type>Text</type>
</CustomField>