force-app/main/default/objects/Code_Red_Account__c/fields/Success_Failure__c.field-meta.xml
<CustomField>
    <fullName>Success_Failure__c</fullName>
    <label>Success/Failure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>