force-app/main/default/objects/Code_Red_Account__c/fields/Success_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Success_Reasons__c</fullName>
    <label>Success Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renewal on time (within the quarter)</fullName>
            </value>
            <value>
                <fullName>Health Improved</fullName>
            </value>
            <value>
                <fullName>Reengagement</fullName>
            </value>
            <value>
                <fullName>User Expansion accomplished</fullName>
            </value>
            <value>
                <fullName>Data Issues Solved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>