force-app/main/default/objects/Code_Red_Account__c/fields/SW_Industry__c.field-meta.xml
<CustomField>
    <fullName>SW_Industry__c</fullName>
    <formula>TEXT(Account__r.SW_Industry__c )</formula>
    <label>SW Industry</label>
    <type>Text</type>
</CustomField>