force-app/main/default/objects/Code_Red_Account__c/fields/SYS_Completed_Cancelled_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>SYS_Completed_Cancelled_Timestamp__c</fullName>
    <label>SYS Completed/Cancelled Timestamp</label>
    <type>Date</type>
</CustomField>