force-app/main/default/objects/Code_Red_Account__c/fields/SYS_In_process_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>SYS_In_process_Timestamp__c</fullName>
    <label>SYS In-process Timestamp</label>
    <type>Date</type>
</CustomField>