force-app/main/default/objects/Code_Red_Account__c/fields/SYS_Submitted_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>SYS_Submitted_Timestamp__c</fullName>
    <label>SYS Submitted Timestamp</label>
    <type>Date</type>
</CustomField>