force-app/main/default/objects/Code_Red_Account__c/fields/What_is_the_customers_business_model__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_customers_business_model__c</fullName>
    <label>What is the customers business model</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>