force-app/main/default/objects/Code_Red_Account__c/fields/What_is_their_pain__c.field-meta.xml
<CustomField>
    <fullName>What_is_their_pain__c</fullName>
    <label>What is their pain</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>