force-app/main/default/objects/Code_Red_Account__c/fields/What_is_their_use_case_for_SimilarWeb__c.field-meta.xml
<CustomField>
    <fullName>What_is_their_use_case_for_SimilarWeb__c</fullName>
    <label>What is their use case for SimilarWeb</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>