force-app/main/default/objects/Code_Red_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_CSM__c</columns>
    <columns>Status__c</columns>
    <columns>Days_since_opened__c</columns>
    <columns>Flag_Photo__c</columns>
    <columns>Recipient__c</columns>
    <columns>Code_Red_Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>